--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -4,10 +4,10 @@
 body {
   padding: 0;
   margin: 0;
-  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: "8bitOperator";
   font-size: 16px;
   line-height: 1.5;
-  color: #606c71; }
+  color: #ffffff; }
 
 a {
   color: #1e6bb8;
@@ -56,7 +56,7 @@ a {
 .page-header {
   color: #fff;
   text-align: center;
-  background-color: #159957;
+  background-color: #000000;
   background-image: linear-gradient(120deg, #155799, #159957); }
 
 @media screen and (min-width: 64em) {
